--- a/ThursdayAfternoon/ThursdayAfternoon.csproj
+++ b/ThursdayAfternoon/ThursdayAfternoon.csproj
@@ -101,6 +101,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Xml.Linq" />
+    <Reference Include="ThursdayAfternoon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\ThursdayAfternoon.Tests\bin\Debug\ThursdayAfternoon.dll</HintPath>
+    </Reference>
     <Reference Include="Utilities.Core">
       <HintPath>..\packages\Utilities.Core.1.12.0.0\lib\net45\Utilities.Core.dll</HintPath>
     </Reference>
@@ -161,6 +165,7 @@
     <Compile Include="Infrastructure\Validation\RegisterValidator.cs" />
     <Compile Include="Infrastructure\Validation\LoginValidator.cs" />
     <Compile Include="Infrastructure\Validation\PresentationEditValidator.cs" />
+    <Compile Include="Infrastructure\Converters.cs" />
     <Compile Include="Migrations\201307251136474_Initial.cs" />
     <Compile Include="Migrations\201307251136474_Initial.Designer.cs">
       <DependentUpon>201307251136474_Initial.cs</DependentUpon>
