--- a/ThursdayAfternoon/Web.config
+++ b/ThursdayAfternoon/Web.config
@@ -18,6 +18,7 @@
       <add assembly="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       <add assembly="SquishIt.Framework" />
       <add assembly="ThursdayAfternoon" />
+      <add assembly="Utilities.Core" />
     </assemblies>
     <namespaces>
       <add namespace="Nancy.ViewEngines.Razor" />
