--- a/ThursdayAfternoon/packages.config
+++ b/ThursdayAfternoon/packages.config
@@ -14,7 +14,7 @@
   <package id="SquishIt" version="0.9.3" targetFramework="net45" />
   <package id="System.Web.Razor.Unofficial" version="2.0.2" targetFramework="net45" />
   <package id="TinyMCE.jQuery" version="4.0.4" targetFramework="net45" />
-  <package id="Twitter.Bootstrap" version="3.0.0-rc1y" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="Utilities.Core" version="1.12.0.0" targetFramework="net45" />
   <package id="Utilities.Web" version="1.1.0.0" targetFramework="net45" />
   <package id="valueinjecter" version="2.3.3" targetFramework="net45" />
